# agentops-mobile-command-center

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  demo.py  llm.py  main.py  router.py  telegram_bot.py
assets/: agentops-demo.srt  demo-teaser.srt  live-screenshot-demo.srt
docs/: SECURITY.md  architecture.md  demo_script.md  demo_teaser_script.md  final_submission_pack.md  submission_checklist.md
templates/: index.html
tests/: test_api.py  test_demo_commands.py  test_llm.py  test_router.py  test_telegram_bot.py
